--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,6 @@
 #quote-container {
   text-align: center;
   position: absolute;
-  bottom: 20%; /* Adjust as needed */
-  width: 100%; /* Occupy full width within #main */
+  bottom: 5%; 
+  width: 100%; 
 }
